# levenshtein_automaton

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: MDAG.h  MDAGNode.h  ParametricState.h  Position.h  SimpleMDAGNode.h  State.h
include/common/: common.h
include/levenshtein_automaton/: AugBitSet.h  LevenshteinAutomaton.h  MDAG.h  MDAGNode.h  SimpleMDAGNode.h  State.h  types.h
resources/: wordList1.txt
src/: LevenshteinAutomaton.cpp  MDAG.cpp  MDAGNode.cpp  ParametricState.cpp  Position.cpp  SimpleMDAGNode.cpp  State.cpp
src/common/: common.cpp
src/levenshtein_automaton/: LevenshteinAutomaton.cpp  MDAG.cpp  MDAGNode.cpp  ParametricState.cpp  SimpleMDAGNode.cpp  State.cpp  types.cpp
tests/: test.cpp
